made design more responsive and added contact section, fixed some layout problems

--- a/portfolio-frontend/src/App.css
+++ b/portfolio-frontend/src/App.css
@@ -12,7 +12,7 @@
   html, body {
     overflow-x: hidden;
   }
-  
+
   body {
     font-family: "DM Sans", sans-serif;
   }
@@ -30,7 +30,7 @@
     position: absolute;
     width: 100%;
     height: 2px;
-    bottom: -4px;
+    bottom: -3px;
     background: linear-gradient(to right, oklch(78.5% 0.115 274.713));
     left: 0;
     transform: scaleX(0);
